--- a/index.html
+++ b/index.html
@@ -5,11 +5,128 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psuedo-Elements-Classes</title>
+    <title>Illustration</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">WHY?</a></li>
+            <li><a href="#">ILLUSTRATION</a></li>
+            <li><a href="#">BUY</a></li>
+        </ul>
+    </nav>
+    <header>
+        <section id="absurd" class="mainSection">
+            <div class="text">
+                <h1>absurd illustrations</h1>
+                <h1>that make sense</h1>
+                <p>What about absurd illustrations for your projects? Take every user on an individual journey through
+                    their
+                    own imagination.</p>
+                <a href="#" class="buttonBlack">Download</a>
+                <a href="#" class="buttonWhite">Subscribe</a>
+            </div>
+            <div class="image">
+                <img src="assets/img/illustration1.gif" alt="ill1">
+            </div>
+        </section>
+    </header>
+    <main>
+        <section id="realBeauty" class="mainSection">
+            <div class="image">
+                <img src="assets/img/illustration2.png" alt="ill2">
+            </div>
+            <div class="text">
+                <h1>real beauty</h1>
+                <h1>resides in imperfection</h1>
+                <p>In a digital era, we sometimes feel the need to interact with something more human that will make us
+                    appreciate both the beauty and the imperfection of something made by hand.</p>
+            </div>
+        </section>
+        <section id="expressiveness" class="mainSection">
+            <div class="text">
+                <h1>expressiveness is...</h1>
+                <h1>the new black</h1>
+                <p>This series of illustrations paradoxically combines absurdity and a deep sense of childishness and
+                    naivety.</p>
+            </div>
+            <div class="image">
+                <img src="assets/img/illustration3.png" alt="ill1">
+            </div>
+        </section>
+        <section id="illustrations" class="sectionCentred">
+            <div class="textCenter">
+                <h1>illustrations for applications</h1>
+                <p>Welcome to my space for experiments! Look at this like a journey we can take together every step of
+                    the way, beginning another chapter with each new phase of the project development. And who knows
+                    where it will take us?</p>
+            </div>
+            <div class="imageCenter">
+                <img src="assets/img/illustration4.png" alt="ill4">
+                <img src="assets/img/illustration5.png" alt="ill5">
+                <img src="assets/img/illustration6.png" alt="ill6">
+            </div>
+        </section>
+        <section id="examples" class="sectionCentred">
+            <div class="textCenter">
+                <h1>examples of use</h1>
+                <p>Each illustration offers the possibility of limitless interpretations and uses and everyone can give
+                    it its own meaning. It depends only on each one's creativity and free spirit.</p>
+            </div>
+            <div class="imageExample">
+                <img src="assets/img/illustration7.jpg" alt="ill7">
+                <img src="assets/img/illustration8.jpg" alt="ill8">
+            </div>
+            <div class="imageExample">
+                <img src="assets/img/illustration9.jpg" alt="ill9">
+                <img src="assets/img/illustration10.jpg" alt="ill10">
+            </div>
+            <div class="imageExample">
+                <img src="assets/img/illustration11.jpg" alt="ill11">
+                <img src="assets/img/illustration12.jpg" alt="ill12">
+            </div>
+        </section>
+        <section id="download" class="sectionCentred">
+            <div class="textCenter">
+                <h1>download illustrations</h1>
+                <p>You're free to use these illustrations for both personal and commercial projects. And if you want to
+                    make a human happy would be nice to give credits by mentioning this website or be my supporter. I
+                    have created a membership plan for people who love my works and wish to support me and receive new
+                    artwork regularly.</p>
+            </div>
+            <div id="membership" class="membership">
+                <p id="membershipHeadline">membership</p>
+                <p id="membershipPrice">$57</p>
+                <p id="membershipSubHeadline">per year</p>
+                <ul>
+                    <li>No link required</li>
+                    <li>Unlimited access</li>
+                    <li>New content regularly</li>
+                    <li>Colored versions</li>
+                    <li>PNG format files</li>
+                    <li>SVG format files</li>
+                    <li>Premium support</li>
+                </ul>
+                <a href="#" id="memberButton">Become Member</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div id="suggestions">
+            <h1>any absurd suggestions?</h1>
+            <p>Email</p>
+            <a href="mailto:super@super.com">super@super.com</a>
+            <p>Follow me</p>
+            <p id="social">
+                <span id="fb"> .</span>fb
+                <span id="ig"> .</span>ig
+                <span id="tw"> .</span>tw
+                <span id="yt"> .</span>yt
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
