added hover and small changes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </div>
         </section>
     </header>
+
+
     <main>
         <section id="realBeauty" class="mainSection">
             <div class="image">
@@ -113,17 +115,23 @@
             </div>
         </section>
     </main>
+
+
     <footer>
-        <div id="suggestions">
+        <div class="suggestions">
             <h1>any absurd suggestions?</h1>
             <p>Email</p>
             <a href="mailto:super@super.com">super@super.com</a>
             <p>Follow me</p>
-            <p id="social">
-                <span id="fb"> .</span>fb
-                <span id="ig"> .</span>ig
-                <span id="tw"> .</span>tw
-                <span id="yt"> .</span>yt
+            <p>
+                <span id="fb"> .</span>
+                <a href="#">fb</a>
+                <span id="ig"> .</span>
+                <a href="#">ig</a>
+                <span id="tw"> .</span>
+                <a href="#">tw</a>
+                <span id="yt"> .</span>
+                <a href="#">yt</a>
             </p>
         </div>
     </footer>
